Apply org.openrewrite.java.migrate.UpgradeToJava17
https://docs.openrewrite.org/running-recipes/popular-recipe-guides/migrate-to-java-17